# Cortex

./: .gitignore  README.md  cortex.key  cortex.key.pub  houdini_export.py  houdini_to_ts.py  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
bridge-plugins/: cortex_bridge_blender.py  cortex_bridge_houdini.py  cortex_bridge_maya.py  cortex_bridge_nuke.py
export-scripts/: cortex_export_houdini.py  cortex_export_katana.py  cortex_export_nuke.py
scripts/: generate-seed.mjs
src/: app.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: ai.rs  analytics.rs  asset.rs  bridge.rs  graph.rs  import.rs  mod.rs  node.rs  relationship.rs  search.rs  vault.rs
src-tauri/src/data/: mod.rs  nodes_seed.sql
src-tauri/src/domain/: asset.rs  blueprint.rs  graph.rs  mod.rs  node.rs  parameter.rs  recipe.rs  relationship.rs  search.rs  vault.rs
src-tauri/src/engines/: ai.rs  analytics.rs  asset.rs  bridge.rs  graph.rs  import.rs  node.rs  relationship.rs  search.rs  vault.rs
src-tauri/src/storage/: database.rs  migrations.rs
src/components/: ErrorBoundary.tsx  OnboardingFlow.tsx  ProfileGate.tsx  SplashScreen.tsx
src/components/ai/: AICopilot.tsx
src/hooks/: index.ts  useAsyncAction.ts  useAutoUpdate.ts  useKeyboard.ts  useLocalStorage.ts  useResizable.ts
src/services/: ai.service.ts  bridge.service.ts  graph.service.ts  node.service.ts  relationship.service.ts  search.service.ts  vault.service.ts
src/stores/: admin.store.ts  ai.store.ts  bridge.store.ts  graph.store.ts  node.store.ts  search.store.ts  settings.store.ts  ui.store.ts  vault.store.ts
src/types/: ai.ts  asset.ts  blueprint.ts  graph.ts  index.ts  node.ts  parameter.ts  relationship.ts  search.ts  vault.ts
src/utils/: constants.ts  platform.ts  portTypes.ts  tauri.ts
(+37 files in other folders)
